--- a/css/style.css
+++ b/css/style.css
@@ -34,39 +34,40 @@ footer {
     cursor: url(../img/mouse.cur), pointer;
 }
 
-.social-list {
-    margin: 4.4% 0 7% 0; /*проценты просто пробовал, чтоб при уменьшении и уменьшался паддинг */
-    padding: 0;
-    list-style: none;
-}
-
-.social-list h2 {
-    width: 230px;
-    margin: 0 auto;
+h2 {
+    display: inline-block;
+    margin: 50px 0 0 0;
     text-transform: uppercase;
     font-weight: 400;
     font-size: 2rem;
     border-bottom: 2px solid #fefbfc;
-    padding-bottom: 20px;
+    padding: 0 40px 20px;
+}
+
+.social-list {
+    margin: 0 0 7% 0; /*проценты просто пробовал, чтоб при уменьшении и уменьшался паддинг */
+    padding: 0;
+    list-style: none;
 }
 
 .social-list__item {
     display: inline-block;
-    margin-top: 20px;
-}
-
-.social-list__item + .social-list__item {
-    margin-left: 35px;
+    margin: 20px 15px 0;
 }
 
 .social-list__link {
+    display: inline-block;
     color: #fff;
     cursor: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/9632/happy.png"), auto;
 }
 
+.social-list__link .fab {
+    font-size: 3.2rem;
+}
+
 .social-list__link:hover .fab {
     color: #19c8fa;
-    transform: scale(2);
+    transform: scale(1.3);
     transition: all .3s  ease-in-out;
 }
 
